    o TCGA mutations per sample used for tcgaCompare are updated to more stable MC3 cohort from deprecated broad firehose.

IMPROVEMENTS:
    o tcgaCompare now accpets comparing against user specifc cohorts. Issue: #229
    o Add missing genes and samples to oncoplot even when they are not altered. Issue: #254
    o Added MTRNR2L8 protein structure to pfam database. Issue: #255
    o Added addtionalFeature argument to oncoplots. Issue: #270
    o Added log scale option for summary and oncoplots. Issue: #273
    o Made protein domain db compatible with R version < 3.5 Issue: #276
    o Added draw `draw_titv`, and `exprsTbl` argument to oncoplot
    o Additional edits with TMB visualization and additionalFeatures Issue: #289

BUG FIX
    o Update code for AnnovarToMaf. PR #288, #234
    o fixed handling of Status in survival. PR #274
    o Fix swapped confidance intervals in mafCompare function Issue: #269
    o update docs, and vectorized code Issue: #266 #267
    o Improve oncoplot annotations for numeric class Issue: #263 and #203
    o In annovarToMaf read the .tsv file considering the header. PR #259
    o Fix legend title order. Issue: #253
    o GISTIC sample size issue fix. Issue: #249
    o Bug fix for oncoplots with CNV data. Issue: #240
    o Better error handling in plotApobecDiff with no SMGs. Issue: #232
    o Bug fix that caused signature extraction to terminate in case of zero mutations. Issue: #228
    o Bug fix due to missing levels contingency tables in clinical enrichment. Issue: #225
    o Add showTumorSampleBarcodes to PlotOncogenicPathways. Issue: #214
    o Cleanup docs for Oncoplot. Issue: #207
    o Implemented `isNumeric` and `groupAnnotationBySize` to improve sorting. Issue: #207
    o Fix ComplexHeatmap update. Issue: #205 #210
    o plotmafSummary addStats bug fix Issue: #204
    o Rainfall plot data.table null fix. Issue: #201
    o Support non human BSgenome. Issue: #197
    o SampleID bug fix. Issue: #153