@@ -144,7 +144,7 @@ sortByAnnotation <-function(numMat,maf, anno, annoOrder = NULL, group = TRUE, is
     anno = anno[order(anno[,1], na.last = TRUE),, drop = FALSE]
     numMat.sorted = numMat[,rownames(anno)]
   }else{
-    anno[,1] = ifelse(test = is.na(anno[,1]), yes = "NA", no = anno[,1]) #NAs are notorious; converting them to characters
+    anno[,1] = ifelse(test = is.na(as.character(anno[,1])), yes = "NA", no = as.character(anno[,1])) #NAs are notorious; converting them to characters
     anno.spl = split(anno, as.factor(as.character(anno[,1]))) #sorting only first annotation
 
     anno.spl.sort = lapply(X = anno.spl, function(x){
