@@ -17,6 +17,7 @@ IMPROVEMENTS:
     o Additional edits with TMB visualization and additionalFeatures Issue: #289
 
 BUG FIX
+    o Oncoplot annotationOrder bug fix. Issue: #293
     o Update code for AnnovarToMaf. PR #288, #234
     o fixed handling of Status in survival. PR #274
     o Fix swapped confidance intervals in mafCompare function Issue: #269
